@@ -3,75 +3,95 @@ package com.suman.airBnbApp.service;
 import com.suman.airBnbApp.dto.RoomDto;
 import com.suman.airBnbApp.entity.Hotel;
 import com.suman.airBnbApp.entity.Room;
+import com.suman.airBnbApp.entity.User;
 import com.suman.airBnbApp.exception.ResourceNotFoundException;
+import com.suman.airBnbApp.exception.UnAuthorisedException;
 import com.suman.airBnbApp.repository.HotelRepository;
 import com.suman.airBnbApp.repository.RoomRepository;
-import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class RoomServiceImpl implements RoomService{
-    private final HotelRepository hotelRepository;
+
     private final RoomRepository roomRepository;
-    private final ModelMapper modelMapper;
+    private final HotelRepository hotelRepository;
     private final InventoryService inventoryService;
+    private final ModelMapper modelMapper;
 
     @Override
-    public RoomDto CreateNewRoom(Long hotelId, @NonNull RoomDto roomDto) {
-        log.info("Created a new room in hotel with ID: {}", hotelId);
+    public RoomDto createNewRoom(Long hotelId, RoomDto roomDto) {
+        log.info("Creating a new room in hotel with ID: {}", hotelId);
         Hotel hotel = hotelRepository
                 .findById(hotelId)
-                .orElseThrow(() -> new ResourceNotFoundException("Hotel not found with ID: " + hotelId));
+                .orElseThrow(() -> new ResourceNotFoundException("Hotel not found with ID: "+hotelId));
+
+        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if(!user.equals(hotel.getOwner())) {
+            throw new UnAuthorisedException("This user does not own this hotel with id: "+hotelId);
+        }
 
         Room room = modelMapper.map(roomDto, Room.class);
         room.setHotel(hotel);
         room = roomRepository.save(room);
-        if(room.getActive()){
+
+        if (hotel.getActive()) {
             inventoryService.initializeRoomForAYear(room);
         }
+
         return modelMapper.map(room, RoomDto.class);
     }
 
     @Override
-    public List<RoomDto> getAllRoomsInHotel( Long hotelId) {
+    public List<RoomDto> getAllRoomsInHotel(Long hotelId) {
         log.info("Getting all rooms in hotel with ID: {}", hotelId);
         Hotel hotel = hotelRepository
                 .findById(hotelId)
-                .orElseThrow(() -> new ResourceNotFoundException("Hotel not found with ID: " + hotelId));
+                .orElseThrow(() -> new ResourceNotFoundException("Hotel not found with ID: "+hotelId));
 
-        return hotel.getRooms().stream()
+        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if(!user.equals(hotel.getOwner())) {
+            throw new UnAuthorisedException("This user does not own this hotel with id: "+hotelId);
+        }
+
+        return hotel.getRooms()
+                .stream()
                 .map((element) -> modelMapper.map(element, RoomDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public RoomDto getRoomById(Long roomId) {
-        log.info("Getting room with ID: {}", roomId);
+        log.info("Getting the room with ID: {}", roomId);
         Room room = roomRepository
                 .findById(roomId)
-                .orElseThrow(() -> new ResourceNotFoundException("Room not found with ID: " + roomId));
+                .orElseThrow(() -> new ResourceNotFoundException("Room not found with ID: "+roomId));
         return modelMapper.map(room, RoomDto.class);
     }
 
-    @Override
     @Transactional
+    @Override
     public void deleteRoomById(Long roomId) {
-        log.info("Delete a room with ID: {}", roomId);
+        log.info("Deleting the room with ID: {}", roomId);
         Room room = roomRepository
                 .findById(roomId)
-                .orElseThrow(() -> new ResourceNotFoundException("Room not found with ID: " + roomId));
+                .orElseThrow(() -> new ResourceNotFoundException("Room not found with ID: "+roomId));
+
+        User user = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if(!user.equals(room.getHotel().getOwner())) {
+            throw new UnAuthorisedException("This user does not own this room with id: "+roomId);
+        }
 
         inventoryService.deleteAllInventories(room);
         roomRepository.deleteById(roomId);
-
-
     }
 }
